When mature, changes should be merged into master *as a merge commit*  and this changelog file updated.

In the following text, the tag "USER" indicates a significant change that will impact user experience in some way. 
The tag "DEVELOPER" indicates a change that significantly impacts the code but is likely not visible to the user. 


10th December 2020
- User: On bake completion only a single Slack message is now sent.


** Install instructions for autoROI **
- MATLAB R2019b. Start with softwareOpenGl mode if you notice rare random crashes
- In your default recipe which is to be loaded each time ensure you have "numOverlapZPlanes: 0.0" in the mosaic section 
- You will likely to have to play with the fields in SIBT.setings.tileAcq until the preview image looks correct. 
  Make the changes permanent by editing the appropriate file in the SETTINGS directory. 
- Update stitchit ini file. IMPORTANT: this includes the stitched image UD and LR flips. Ensure the final stitched images
  aren't flipped compared to BakingTray! 
- The TissueCyte settings are now gone from the StitchIt ini files. You should remove the [experiment], [micsPerPixel], and "Objectives" sections. See the stitchitConf_DEFAULT.ini file for an example. 

22nd September 2020
- dev - stage boundaries overlaid on preview image
- dev - stage position timer runs only after a stage motion entered in absolute position windows. Jog motions are now blocking.
- dev - cutting cycle now moves to XY position before moving in Z and stage positions beyond the blade no longer block cutting. 

27th July 2020
- Pre-release and dev branches - Now merged with auto-ROI
- autoROI code merged into dev

6th July 2020
- User [branch autoROI]: ROI rectangle snaps to the nearest number of whole tiles.


22nd June 2020
- User [branch autoROI]: Number of overlapping z-planes is now a setting in the GUI. 


15th June 2020
- User [branch autoROI]: Main view is re-organised so order of elements is more logical


6th June 2020