@@ -33,6 +33,9 @@ function setImageSize(obj,pixelsPerLine)
     pixEqLin = obj.hC.hRoiManager.pixelsPerLine == obj.hC.hRoiManager.linesPerFrame; % Do we currently have a square image?
     fastMult = [];
     slowMult = [];
+    shiftFast = [];
+    shiftSlow = [];
+    spatialFillFrac = [];
     objRes = [];
     zoomFact =[];
     pixBin = [];
@@ -59,11 +62,15 @@ function setImageSize(obj,pixelsPerLine)
         fastMult = settings.fastMult;
         slowMult = settings.slowMult;
         zoomFact = settings.zoomFactor;
+        shiftFast = settings.shiftFast;
+        shiftSlow = settings.shiftSlow;
+        spatialFillFrac = settings.spatialFillFrac;
         objRes = settings.objRes;
         if strcmp('linear',obj.scannerType)
             pixBin = settings.pixBin;
             sampRate = settings.sampRate;
         end
+
 
     end
 
@@ -73,6 +80,10 @@ function setImageSize(obj,pixelsPerLine)
     % Do we have square images?
     pixEqLinCheckBox = obj.hC.hRoiManager.forceSquarePixelation;
 
+    % If scanning, stop scanner
+    if obj.isAcquiring
+        obj.abortScanning
+    end
 
     if pixEqLin % is the user asking for square tiles?
         % It's pretty easy to change the image size if we have square images. 
@@ -102,10 +113,6 @@ function setImageSize(obj,pixelsPerLine)
             obj.hC.hRoiManager.scanAngleMultiplierFast=fastMult;
             obj.hC.hRoiManager.scanAngleMultiplierSlow=slowMult;
 
-            if ~isempty(objRes)
-                obj.hC.objectiveResolution = objRes;
-            end
-
     end
     
     if ~isempty(zoomFact)
@@ -120,7 +127,25 @@ function setImageSize(obj,pixelsPerLine)
         obj.hC.hScan2D.sampleRate = sampRate;
     end
 
-    % Issue a warning if the FOV of the image has changed after changing the number of pixels. 
+    
+    % If present, set the slow and fast shifts and the spatial fill fraction           
+    if ~isempty(spatialFillFrac)
+        obj.hC.hScan2D.fillFractionSpatial = spatialFillFrac;
+    end
+
+    if ~isempty(objRes)
+        obj.hC.objectiveResolution = objRes;
+    end
+    
+    if ~isempty(shiftSlow)
+        obj.hC.hRoiManager.scanAngleShiftSlow = shiftSlow;
+    end
+
+    if ~isempty(shiftFast)
+        obj.hC.hRoiManager.scanAngleShiftFast = shiftFast;
+    end
+
+    % Issue a warning if the FOV of the image has changed after changing the number of pixels.
     after = obj.returnScanSettings;
 
     if isempty(objRes)
