@@ -7,6 +7,9 @@ In the following text, the tag "USER" indicates a significant change that will i
 The tag "DEVELOPER" indicates a change that significantly impacts the code but is likely not visible to the user. 
 
 
+15th Jan 2020
+- User/super-user: scanner setting YAML can now set fast and slow offsets and also spatial fill fraction
+
 10th December 2020
 - User: On bake completion only a single Slack message is now sent.
 
